# Imagimp

./: CMakeLists.txt  Makefile  gmon.out  miniGimp-IMAC-JS.cbp  miniGimp-IMAC-JS.depend  miniGimp-IMAC-JS.files  miniGimp-IMAC-JS.includes  miniGimp-IMAC-JS.layout  test.ppm  test2.ppm  test3.ppm
doc/: README.txt
images/: Pens.512.ppm
include/: Calque.h  Imagimp.h  PPM.h  blend.h  dliste.h  imagimp_dialog.h  imagimp_string.h  interface.h  layer.h  liste.h  outils.h  picture.h
miniGimp-IMAC-JS/: CMakeLists.txt
miniGimp-IMAC-JS-master/miniGimp-IMAC-JS-master/: README.md  miniGimp-IMAC-JS.cbp  miniGimp-IMAC-JS.creator.user.e36c766.3.3-pre1  miniGimp-IMAC-JS.creator.user.e99d394.18  miniGimp-IMAC-JS.depend  miniGimp-IMAC-JS.files
miniGimp-IMAC-JS-master/miniGimp-IMAC-JS-master/include/: Imagimp.h  PPM.h  interface.h
miniGimp-IMAC-JS-master/miniGimp-IMAC-JS-master/src/glimagimp/: interface.c
miniGimp-IMAC-JS-master/miniGimp-IMAC-JS-master/src/imagimp/: Imagimp.c  layer.c  main.c
src/glimagimp/: interface.c  outils.c
src/imagimp/: Calque.c  Imagimp.c  PPM.c  blend.c  imagimp_dialog.c  imagimp_string.c  layer.c  layer.c.save-failed  main.c  picture.c
